# Agentic-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.md
src/: __init__.py  basic.py  func_calling_llm  llm_utils.py  prompts.py  py_func_agents.py  sequential_generator.py  sequential_prompting.py
src/architecture/: 01_structured_data_extraction.py  02_invoice_processing_agent.py  03_persona_pattern.py  04_persona_abstraction.py  05_persona_pattern_example.py  06_mate_dp.py  07_env_safety.py  08_agent_to_agent_comm.py  09_memory_interaction_patterns.py  10_dependency_injection.py  11_env_dependency_injection.py  12_capability_pattern.py  13_plan_first_pattern.py  14_plan_progress_tracking.py
src/game_framework/: AgentLanguages.py  framework.py  main.py
tests/: __init__.py
