[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_agents"
version = "0.1.0"
description = "Enterprise-grade Python project for intelligent agent development."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest"
]
